@@ -1,7 +1,12 @@
+
 2001-08-10  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* configure.in: also build data files even with --disable-tools (oops)
 
 2001-08-10  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* schedule.cc (Sleep_schedule): Always try to find bed.
+	* usecode/intrinsics.cc: Remove_npc() sets schedule to 'wait' so
+	NPC won't come back.
 
 	* actors.cc: Got to set flag 0x10 even if in SI, since it gets
 	tested in Usecode.
